Mostly formatting and replacing "paket" with "packet" ;-)